Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-16677

wirecheck.c not compilable and has diverged from wiretest.c

Details

    • Bug
    • Resolution: Fixed
    • Minor
    • Lustre 2.16.0
    • None
    • None
    • 3
    • 9223372036854775807

    Description

      [zam@rocky utils]$ make wirecheck
      gcc -DHAVE_CONFIG_H -I. -I../..  -DCC="\"gcc\"" -include /home/zam/work/git/lustre-wc-rel/undef.h -include /home/zam/work/git/lustre-wc-rel/config.h -I/home/zam/work/git/lustre-wc-rel/lnet/include/uapi -I/home/zam/work/git/lustre-wc-rel/lustre/include/uapi -I/home/zam/work/git/lustre-wc-rel/libcfs/include -I/home/zam/work/git/lustre-wc-rel/lnet/utils/ -I/home/zam/work/git/lustre-wc-rel/lustre/include  -fPIC -D_GNU_SOURCE -D_LARGEFILE64_SOURCE=1 -D_FILE_OFFSET_BITS=64 -DLUSTRE_UTILS=1  -g -O2 -Wall -Werror -MT wirecheck-wirecheck.o -MD -MP -MF .deps/wirecheck-wirecheck.Tpo -c -o wirecheck-wirecheck.o `test -f 'wirecheck.c' || echo './'`wirecheck.c
      wirecheck.c: In function 'check_lustre_msg_v2':
      wirecheck.c:419:30: error: 'struct lustre_msg_v2' has no member named 'lm_padding_2'; did you mean 'lm_padding_3'?
        CHECK_MEMBER(lustre_msg_v2, lm_padding_2);
                                    ^~~~~~~~~~~~
      wirecheck.c:97:38: note: in definition of macro 'CHECK_VALUE'
         " (long long)"#a");\n", (long long)a);  \
                                            ^
      wirecheck.c:156:2: note: in expansion of macro 'CHECK_MEMBER_OFFSET'
        CHECK_MEMBER_OFFSET(s, m);    \
        ^~~~~~~~~~~~~~~~~~~
      wirecheck.c:419:2: note: in expansion of macro 'CHECK_MEMBER'
        CHECK_MEMBER(lustre_msg_v2, lm_padding_2);
        ^~~~~~~~~~~~
      wirecheck.c:419:30: error: 'struct lustre_msg_v2' has no member named 'lm_padding_2'; did you mean 'lm_padding_3'?
        CHECK_MEMBER(lustre_msg_v2, lm_padding_2);
                                    ^~~~~~~~~~~~
      wirecheck.c:97:38: note: in definition of macro 'CHECK_VALUE'
         " (long long)"#a");\n", (long long)a);  \
                                            ^
      wirecheck.c:157:2: note: in expansion of macro 'CHECK_MEMBER_SIZEOF'
        CHECK_MEMBER_SIZEOF(s, m);    \
        ^~~~~~~~~~~~~~~~~~~
      wirecheck.c:419:2: note: in expansion of macro 'CHECK_MEMBER'
        CHECK_MEMBER(lustre_msg_v2, lm_padding_2);
        ^~~~~~~~~~~~
      wirecheck.c: In function 'check_nodemap_cluster_rec':
      wirecheck.c:2648:15: error: attempt to take address of bit-field structure member 'ncr_flags'
        CHECK_MEMBER(nodemap_cluster_rec, ncr_flags);
                     ^~~~~~~~~~~~~~~~~~~
      wirecheck.c:97:38: note: in definition of macro 'CHECK_VALUE'
         " (long long)"#a");\n", (long long)a);  \
                                            ^
      wirecheck.c:156:2: note: in expansion of macro 'CHECK_MEMBER_OFFSET'
        CHECK_MEMBER_OFFSET(s, m);    \
        ^~~~~~~~~~~~~~~~~~~
      wirecheck.c:2648:2: note: in expansion of macro 'CHECK_MEMBER'
        CHECK_MEMBER(nodemap_cluster_rec, ncr_flags);
        ^~~~~~~~~~~~
      wirecheck.c:140:25: error: 'sizeof' applied to a bit-field
        CHECK_VALUE((int)sizeof(((struct s *)0)->m));  \
                               ^
      wirecheck.c:97:38: note: in definition of macro 'CHECK_VALUE'
         " (long long)"#a");\n", (long long)a);  \
                                            ^
      wirecheck.c:157:2: note: in expansion of macro 'CHECK_MEMBER_SIZEOF'
        CHECK_MEMBER_SIZEOF(s, m);    \
        ^~~~~~~~~~~~~~~~~~~
      wirecheck.c:2648:2: note: in expansion of macro 'CHECK_MEMBER'
        CHECK_MEMBER(nodemap_cluster_rec, ncr_flags);
        ^~~~~~~~~~~~
      wirecheck.c:2649:15: error: attempt to take address of bit-field structure member 'ncr_flags2'
        CHECK_MEMBER(nodemap_cluster_rec, ncr_flags2);
                     ^~~~~~~~~~~~~~~~~~~
      wirecheck.c:97:38: note: in definition of macro 'CHECK_VALUE'
         " (long long)"#a");\n", (long long)a);  \
                                            ^
      wirecheck.c:156:2: note: in expansion of macro 'CHECK_MEMBER_OFFSET'
        CHECK_MEMBER_OFFSET(s, m);    \
        ^~~~~~~~~~~~~~~~~~~
      wirecheck.c:2649:2: note: in expansion of macro 'CHECK_MEMBER'
        CHECK_MEMBER(nodemap_cluster_rec, ncr_flags2);
        ^~~~~~~~~~~~
      wirecheck.c:140:25: error: 'sizeof' applied to a bit-field
        CHECK_VALUE((int)sizeof(((struct s *)0)->m));  \
                               ^
      wirecheck.c:97:38: note: in definition of macro 'CHECK_VALUE'
         " (long long)"#a");\n", (long long)a);  \
                                            ^
      wirecheck.c:157:2: note: in expansion of macro 'CHECK_MEMBER_SIZEOF'
        CHECK_MEMBER_SIZEOF(s, m);    \
        ^~~~~~~~~~~~~~~~~~~
      wirecheck.c:2649:2: note: in expansion of macro 'CHECK_MEMBER'
        CHECK_MEMBER(nodemap_cluster_rec, ncr_flags2);
        ^~~~~~~~~~~~
      make: *** [Makefile:2165: wirecheck-wirecheck.o] Error 1
      [zam@rocky utils]$ 

      Attachments

        Issue Links

          Activity

            [LU-16677] wirecheck.c not compilable and has diverged from wiretest.c
            pjones Peter Jones added a comment -

            Landed for 2.16

            pjones Peter Jones added a comment - Landed for 2.16

            "Oleg Drokin <green@whamcloud.com>" merged in patch https://review.whamcloud.com/c/fs/lustre-release/+/50479/
            Subject: LU-16677 utils: add bitfields and ifdefs to wiretest
            Project: fs/lustre-release
            Branch: master
            Current Patch Set:
            Commit: 5a730827147714136b7d5035ca6115545a6b5ef0

            gerrit Gerrit Updater added a comment - "Oleg Drokin <green@whamcloud.com>" merged in patch https://review.whamcloud.com/c/fs/lustre-release/+/50479/ Subject: LU-16677 utils: add bitfields and ifdefs to wiretest Project: fs/lustre-release Branch: master Current Patch Set: Commit: 5a730827147714136b7d5035ca6115545a6b5ef0

            "Oleg Drokin <green@whamcloud.com>" merged in patch https://review.whamcloud.com/c/fs/lustre-release/+/50456/
            Subject: LU-16677 utils: synchronize wirecheck.c and wiretest.c
            Project: fs/lustre-release
            Branch: master
            Current Patch Set:
            Commit: d43eb211995e0afb35690946c78ef6c82b9f86ad

            gerrit Gerrit Updater added a comment - "Oleg Drokin <green@whamcloud.com>" merged in patch https://review.whamcloud.com/c/fs/lustre-release/+/50456/ Subject: LU-16677 utils: synchronize wirecheck.c and wiretest.c Project: fs/lustre-release Branch: master Current Patch Set: Commit: d43eb211995e0afb35690946c78ef6c82b9f86ad

            "Andreas Dilger <adilger@whamcloud.com>" uploaded a new patch: https://review.whamcloud.com/c/fs/lustre-release/+/50479
            Subject: LU-16677 utils: add bitfields and ifdefs to wiretest
            Project: fs/lustre-release
            Branch: master
            Current Patch Set: 1
            Commit: 3928da7f2d9680ef955ddf0dae1469c046224475

            gerrit Gerrit Updater added a comment - "Andreas Dilger <adilger@whamcloud.com>" uploaded a new patch: https://review.whamcloud.com/c/fs/lustre-release/+/50479 Subject: LU-16677 utils: add bitfields and ifdefs to wiretest Project: fs/lustre-release Branch: master Current Patch Set: 1 Commit: 3928da7f2d9680ef955ddf0dae1469c046224475

            "Alexander Zarochentsev <alexander.zarochentsev@hpe.com>" uploaded a new patch: https://review.whamcloud.com/c/fs/lustre-release/+/50456
            Subject: LU-16677 utils: synchonize wirecheck.c and wiretest.c
            Project: fs/lustre-release
            Branch: master
            Current Patch Set: 1
            Commit: 8e61d3419fe498e243516cd71cd89d1099a2653e

            gerrit Gerrit Updater added a comment - "Alexander Zarochentsev <alexander.zarochentsev@hpe.com>" uploaded a new patch: https://review.whamcloud.com/c/fs/lustre-release/+/50456 Subject: LU-16677 utils: synchonize wirecheck.c and wiretest.c Project: fs/lustre-release Branch: master Current Patch Set: 1 Commit: 8e61d3419fe498e243516cd71cd89d1099a2653e

            People

              zam Alexander Zarochentsev
              zam Alexander Zarochentsev
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: