LU-16677 utils: synchronize wirecheck.c and wiretest.c

wirecheck.c is not compilable and out of sync with
wiretest.c.
The patch adds forgotten changes to wirecheck.c and
replaces wiretest.c by a version generated by
"make newwiretest".

Test-Parameters: trivial
Signed-off-by: Alexander Zarochentsev <alexander.zarochentsev@hpe.com>
Change-Id: I22cc75b02e163ce3ca743be608ec334c85129b4c
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/50456
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Andrew Perepechko <andrew.perepechko@hpe.com>
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Reviewed-by: Sebastien Buisson <sbuisson@ddn.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>